--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,3 +1,8 @@
+
+*{
+  box-sizing: border-box;
+}
+
 header{
   width: 100%;
   background-color: rgb(248, 248, 248);
@@ -9,6 +14,7 @@ nav{
   flex-flow: row nowrap;
   justify-content: space-around;
   padding: 20px;
+  position: relative;
 }
 
 nav>ul>li{
@@ -16,19 +22,45 @@ nav>ul>li{
   list-style-type: none;
   font-size: 7px;
   margin-left: 8px;
-  margin-bottom: 0;
+
 
 }
 
 li:hover {
+  height: 8px;
   border-bottom: 1px solid rgb(70, 70, 80);
+
+
+
 }
+
+.catalogo {
+  position: relative;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'wght' 1,
+  'GRAD' 5,
+  'opsz' 1;
+  margin-left: 4.3rem;
+  margin-top: -0.2rem;
+  position: absolute;
+  margin: 0, 1rem;
+  width: 0.5px;
+  font-size: 15px;
+
+}
+
 
 .descuentos {
   cursor: pointer;
   list-style-type: none;
   font-size: 7px;
-  margin-left: 4.1rem;
+  margin-right: 0px;
+  margin-top: 20px;
+  position: absolute;
+
 }
 
 h6 {
@@ -44,6 +76,7 @@ h6 {
 .opciones{
   display: flex;
   margin: 20px;
+
 }
 
 .angular{
@@ -51,3 +84,22 @@ h6 {
   height: 85px;
 }
 
+
+
+
+.icons {
+  display: flex;
+  margin-right: 10rem;
+
+}
+
+.icons-section {
+  width: 20px;
+  height: 20px;
+  margin: 2px;
+}
+.angular:hover,
+.icons-section:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
