--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,11 +2,26 @@
 *{
   box-sizing: border-box;
 }
-
+.envios {
+  text-align: center;
+  color:rgba(46, 43, 38, 0.411);
+  background-color: rgba(65, 226, 178, 0.767);
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: rgb(53, 50, 50);
+  padding: 0.4rem;
+}
 header{
-  width: 100%;
-  background-color: rgb(248, 248, 248);
+  width: 80%;
+  /* background-color: rgb(216, 0, 0); */
   color: rgb(138, 131, 131);
+  margin: auto;
+  margin-top: 0;
+  padding-top: 10px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content:space-between;
+  align-items: center;
 }
 
 nav{
@@ -16,43 +31,38 @@ nav{
   padding: 20px;
   position: relative;
 }
-
+nav>ul{
+  display: flex;
+  margin: 20px;
+}
 nav>ul>li{
   cursor: pointer;
   list-style-type: none;
   font-size: 7px;
   margin-left: 8px;
-
-
+  padding-bottom: 2px;
 }
-
 li:hover {
-  height: 8px;
+  height: 20px;
   border-bottom: 1px solid rgb(70, 70, 80);
-
-
-
 }
-
-.catalogo {
-  position: relative;
+.catalogo-option{
+  text-align: center;
+  margin-top: 0;
 }
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'wght' 1,
-  'GRAD' 5,
-  'opsz' 1;
-  margin-left: 4.3rem;
-  margin-top: -0.2rem;
+.catalogo-option i{
+  font-size: 0.8rem;
+}
+.catalogo-nav{
   position: absolute;
-  margin: 0, 1rem;
-  width: 0.5px;
-  font-size: 15px;
-
+  list-style: none;
+  font-size: 1rem;
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+  color: white;
+  background-color: rgba(20, 20, 20, 0.815);
 }
-
-
 .descuentos {
   cursor: pointer;
   list-style-type: none;
@@ -60,46 +70,20 @@ li:hover {
   margin-right: 0px;
   margin-top: 20px;
   position: absolute;
-
 }
 
-h6 {
-  text-align: center;
-  color:rgba(46, 43, 38, 0.411);
-  background-color: rgba(65, 226, 178, 0.767);
-  font-size: 7px;
-  color: rgb(53, 50, 50);
-  padding: 0.4rem;
-
+.imagen{
+  width: 150px;
+  height: 90px;
+  margin-left: -11%;
+  transition: all 0.5s ease;
 }
-
-.opciones{
-  display: flex;
-  margin: 20px;
-
-}
-
-.angular{
-  width: 128px;
-  height: 85px;
-}
-
-
-
-
-.icons {
-  display: flex;
-  margin-right: 10rem;
-
-}
-
-.icons-section {
-  width: 20px;
-  height: 20px;
-  margin: 2px;
-}
-.angular:hover,
-.icons-section:hover {
+.imagen:hover{
   transform: scale(1.2);
   cursor: pointer;
 }
+.icons {
+  display: flex;
+}
+
+
